fix: InputBox align issue
Description:
e.g. Input an integral symbol into the InputBox component, and you'll find it is not aligned with the right bracket.

--- a/src/style/calculator/calculator.less
+++ b/src/style/calculator/calculator.less
@@ -84,12 +84,9 @@
             padding-right: 50px;
             z-index: 100;
             .display {
+                justify-content: flex-end;
                 font-size: 30px;
-                min-height: 100px;
-                & > span {
-                    display: inline-flex;
-                    align-items: center;
-                }
+                height: 100px;
                 & > .tag-var {
                     color: var(--ca-tag-var);
                 }
@@ -103,10 +100,10 @@
                     }
                 }
                 .cursor {
-                    max-height: 40px;
+                    height: 40px;
                 }
                 *[data-testid=react-katex] {
-                    height: 100%;
+                    height: fit-content;
                 }
             }
         }
@@ -118,15 +115,12 @@
             padding-right: 50px;
             .display {
                 display: flex;
-                // justify-content: flex-end;
+                justify-content: flex-end;
                 color: var(--ca-gray-light);
                 font-size: 45px;
                 min-height: 156px;
                 overflow-x: auto;
                 .scrollbar-style();
-                & > div:first-child {
-                    margin-left: auto;
-                }
                 span.mfrac {
                     font-size: .82em;
                 }
