--- a/src/style/dialogs/function-editor.less
+++ b/src/style/dialogs/function-editor.less
@@ -27,13 +27,9 @@ dialog.function-editor-dialog .main-container {
                 overflow-x: auto;
                 .display {
                     font-size: 16px;
-                    min-height: 40px;
-                    max-height: 40px;
-                    .katex-display {
-                        margin: .6em 0;
-                    }
+                    height: 40px;
                     .cursor {
-                        margin: .7em 0;
+                        height: 16px;
                         margin-left: 0;
                         margin-right: -1px;
                     }
