--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -261,9 +261,9 @@
                                 overflow-x: auto;
                                 .display {
                                     font-size: 12px;
-                                    min-height: 40px;
-                                    max-height: 40px;
+                                    height: 40px;
                                     .cursor {
+                                        height: 16px;
                                         margin-left: 0;
                                         margin-right: -1px;
                                     }
